--- a/index.html
+++ b/index.html
@@ -786,6 +786,8 @@
             </div>
 
             <div class="features-section">
+		    <script async="async" data-cfasync="false" src="//pl26931930.profitableratecpm.com/ddb3a8691f33372546de9c24797cb4f8/invoke.js"></script>
+<div id="container-ddb3a8691f33372546de9c24797cb4f8"></div>
                 <h2 class="section-title"><i class="fas fa-star"></i> Premium Features</h2>
                 <div class="features-grid">
                     <div class="feature-card">
