--- a/index.html
+++ b/index.html
@@ -823,8 +823,16 @@
 
 
 
-<script async="async" data-cfasync="false" src="//pl26931930.profitableratecpm.com/ddb3a8691f33372546de9c24797cb4f8/invoke.js"></script>
-<div id="container-ddb3a8691f33372546de9c24797cb4f8"></div>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '95da8bfe4ca9a7a13ccfa7eb40501d85',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/95da8bfe4ca9a7a13ccfa7eb40501d85/invoke.js"></script>
 		    
             </div>
 
