--- a/index.html
+++ b/index.html
@@ -865,9 +865,9 @@
                 <i class="fas fa-history tab-icon"></i>
                 <span>History</span>
             </a>
-            <a href="#" class="tab-item">
-                <i class="fas fa-cog tab-icon"></i>
-                <span>Settings</span>
+            <a href="https://lovepro2025.vercel.app/quiz.html" class="tab-item">
+                <i class="fas fa-tasks"></i>
+                <span>QNA</span>
             </a>
         </div>
     </div>
