--- a/index.html
+++ b/index.html
@@ -866,7 +866,7 @@
                 <span>History</span>
             </a>
             <a href="https://lovepro2025.vercel.app/quiz.html" class="tab-item">
-                <i class="fas fa-tasks"></i>
+               <i class="fas fa-question-circle"></i> 
                 <span>QNA</span>
             </a>
         </div>
