--- a/index.html
+++ b/index.html
@@ -509,6 +509,14 @@
                 opacity: 0;
             }
         }
+
+
+
+	    .fa-solid, .fas {
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    font-size: 22px;
+}
     </style>
 	
 	
